# libhaven

./: .clang-format  .gitignore  CMakeLists.txt  dependencies.txt
benchmark/: CMakeLists.txt
benchmark/buffer/: CMakeLists.txt  benchmark.adoc  ffs_buffer.hxx  ffs_buffer_test.cxx  full_insert.cxx  half_insert.cxx  insert.cxx  mx_buffer.hxx  mx_buffer_test.cxx  rw_buffer.cxx  rw_buffer.hxx  rw_buffer_test.cxx  test_type.cxx  test_type.hxx
benchmark/ffs vs ringbuffer/: CMakeLists.txt  benchmark.adoc  ffs_buffer.cxx  ffs_buffer.hxx  ffs_buffer_test.cxx  main.cxx
benchmark/pool/: CMakeLists.txt
benchmark/pool/common/: CMakeLists.txt  check_conditions.cxx  check_conditions.hxx  page-allocator.hxx  page-allocator.mingw.cxx  page-allocator.win.cxx  page-allocator.win32.cxx
benchmark/pool/mx_pool/: CMakeLists.txt  mx_pool.cxx  mx_pool.hxx  mx_puddle.cxx  mx_puddle.hxx
cmake/: simd.cmake
docs/: general-design.adoc
docs/haven/common/: class_check_conditions.adoc  class_message_type.adoc  object_postcondition.adoc  object_precondition.adoc
src/haven/common/: CMakeLists.txt  check_conditions.cxx  check_conditions.hxx
src/haven/mem/: CMakeLists.txt  page-allocator.hxx  page-allocator.mingw.cxx  page-allocator.win.cxx  page-allocator.win32.cxx  pool.cxx  pool.hxx  puddle.cxx  puddle.hxx
test/: CMakeLists.txt
test/common/: CMakeLists.txt  postconditions.cxx  preconditions.cxx
test/mem/: CMakeLists.txt  main.cxx  puddle.cxx
